--- a/form2.html
+++ b/form2.html
@@ -9,7 +9,7 @@
 <body>
     <header id="header" class="header">
         <img class="logo" src="img/logobpsds.png" alt="BPS Deli Serdang" height="90" width="400">
-        <a class="beranda" href="#">Beranda</a>
+        <!-- <a class="beranda" href="#">Beranda</a> -->
     </header>
     <div class="container mt-5">
         <div class="stepper">
