--- a/finish.html
+++ b/finish.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header id="header" class="header">
-        <img class="logo" src="img/logobpsds.png" alt="BPS Deli Serdang" height="90" width="400">
+        <img class="logo" src="img/logobpsds.png" alt="BPS Kabupaten Deli Serdang" height="90" width="400">
         <!-- <a class="beranda" href="">Formulir</a> -->
     </header>
     <main>
