--- a/form2.html
+++ b/form2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header id="header" class="header">
-        <img class="logo" src="img/logobpsds.png" alt="BPS Deli Serdang" height="90" width="400">
+        <img class="logo" src="img/logobpsds.png" alt="BPS Kabupaten Deli Serdang" height="90" width="400">
         <!-- <a class="beranda" href="#">Beranda</a> -->
     </header>
     <div class="container mt-5">
