--- a/form.html
+++ b/form.html
@@ -122,7 +122,8 @@
                 <span class="error-message">Pemanfaatan wajib dipilih</span>
             </div>
 
-            <button type="submit" >Selanjutnya</button>
+            <a href="form2.html" class="button">Selanjutnya</a>
+            <!-- <button type="submit">Selanjutnya</button> -->
         </form>
     </div>
     <script src="script.js"></script>
