--- a/form2.html
+++ b/form2.html
@@ -107,7 +107,7 @@
                     <span class="star" data-value="10">&#9733;</span>
                 </div>
             </div>
-            <a href="form2.html" class="button">Submit</a>
+            <a href="finish.html" class="button">Submit</a>
             <!-- <button type="submit">Submit</button> -->
         </form>
     </div>
