--- a/form2.html
+++ b/form2.html
@@ -119,17 +119,23 @@
             <input type="submit" value="Submit" name="simpan" class="submit">
         </form>
     </div>
-    <script src="script-star.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const stars = document.querySelectorAll('.star');
 
             stars.forEach(star => {
                 star.addEventListener('click', (e) => {
-                    const value = parseInt(star.getAttribute('data-value'));
-                    const question = star.parentElement.getAttribute('data-question');
+                    const value = parseInt(star.getAttribute('data-value')); // Ambil nilai dari data-value di bintang yang diklik
+                    const question = star.parentElement.getAttribute('data-question'); // Ambil nomor pertanyaan dari atribut data-question
+
+                    // Update nilai di elemen input hidden sesuai pertanyaan
+                    const input = document.getElementById(`q${question}`);
+                    if (input) {
+                        input.value = value; // Set nilai input hidden dengan nilai bintang yang diklik
+                    }
+
+                    // Visual feedback: tambahkan class 'actived' ke bintang-bintang yang sudah atau kurang dari nilai yang diklik
                     const starsForQuestion = document.querySelectorAll(`.stars[data-question="${question}"] .star`);
-                    
                     starsForQuestion.forEach(s => {
                         if (parseInt(s.getAttribute('data-value')) <= value) {
                             s.classList.add('actived');
