--- a/form2.html
+++ b/form2.html
@@ -107,8 +107,9 @@
                     <span class="star" data-value="10">&#9733;</span>
                 </div>
             </div>
-            <a href="finish.html" class="button">Submit</a>
+            <!-- <a href="finish.html" class="button">Submit</a> -->
             <!-- <button type="submit">Submit</button> -->
+            <input type="submit" value="Submit" name="simpan" class="submit">
         </form>
     </div>
     <script>
