--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header id="header" class="header">
         <img class="logo" src="img/logobpsds.png" alt="BPS Kabupaten Deli Serdang " height="90" width="400">
-		<a class="beranda" href="beranda.php">Beranda</a>
+		<a class="beranda" href="login.html">Login</a>
     </header>
     <div class="container mt-5">
         <div class="stepper">
