--- a/finish.html
+++ b/finish.html
@@ -9,12 +9,14 @@
 <body>
     <header id="header" class="header">
         <img class="logo" src="img/logobpsds.png" alt="BPS Kabupaten Deli Serdang" height="90" width="400">
-        <!-- <a class="beranda" href="">Formulir</a> -->
+		<a class="beranda" href="login.html">Login</a>
     </header>
     <main>
         <section class="thank-you">
             <h1>Terima Kasih</h1>
             <h3>Terima kasih telah menggunakan Pelayanan Statistik Terpadu (PST) di BPS Kabupaten Deli Serdang.</h3>
+            <br>
+            <a class="back" href="/index.html">Kembali</a>
         </section>
     </main>
 </body>
