fix button kembali finish.html

--- a/finish.html
+++ b/finish.html
@@ -16,7 +16,7 @@
             <h1>Terima Kasih</h1>
             <h3>Terima kasih telah menggunakan Pelayanan Statistik Terpadu (PST) di BPS Kabupaten Deli Serdang.</h3>
             <br>
-            <a class="back" href="/index.html">Kembali</a>
+            <a class="back" href="index.html">Kembali</a>
         </section>
     </main>
 </body>
